--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,34 @@ my_concatet3.mp4
 __pycache__/image_to_video.cpython-312.pyc
 __pycache__/server.cpython-312.pyc
 audio/beats-1.mp3
+incoming_audio/Ou5rmAnuuC/Aaye Ho Meri Zindagi Mein Song Cover by Karan Nawani  Unplugged Cover Songs.mp3
+incoming_audio/YihuZ2wGiU/Aa Chal Ke Tujhe with Lyrics  आ चल क तझ क बल  Door Gagan Ki Chhaon Mein.mp3
+incoming_images/Ou5rmAnuuC/image-7.jpg
+incoming_images/Ou5rmAnuuC/image-8.jpg
+incoming_images/Ou5rmAnuuC/image-9.jpg
+incoming_images/Ou5rmAnuuC/image-10.jpg
+incoming_images/Ou5rmAnuuC/image-11.jpg
+incoming_images/Ou5rmAnuuC/image-12.jpg
+incoming_images/Ou5rmAnuuC/image-13.jpg
+incoming_images/Ou5rmAnuuC/image-14.jpg
+incoming_images/Ou5rmAnuuC/image-15.jpg
+incoming_images/Ou5rmAnuuC/image-20.jpg
+incoming_images/Ou5rmAnuuC/image-21.jpg
+incoming_images/Ou5rmAnuuC/image-22.jpg
+incoming_images/YihuZ2wGiU/20240122_122219.jpg
+incoming_images/YihuZ2wGiU/20240122_122243.jpg
+incoming_images/YihuZ2wGiU/20240122_123252.jpg
+incoming_images/YihuZ2wGiU/20240122_123918.jpg
+incoming_images/YihuZ2wGiU/20240122_124344.jpg
+incoming_images/YihuZ2wGiU/20240122_124409.jpg
+incoming_images/YihuZ2wGiU/20240122_124532.jpg
+incoming_images/YihuZ2wGiU/20240122_124538.jpg
+incoming_images/YihuZ2wGiU/20240122_124554.jpg
+incoming_images/YihuZ2wGiU/20240122_124826.jpg
+incoming_images/YihuZ2wGiU/20240122_130900.jpg
+incoming_images/YihuZ2wGiU/20240122_131518.jpg
+incoming_images/YihuZ2wGiU/20240122_131546.jpg
+incoming_images/YihuZ2wGiU/20240122_132455.jpg
+incoming_images/YihuZ2wGiU/20240122_133415.jpg
+incoming_videos/YihuZ2wGiU/WhatsApp Video 2024-03-01 at 6.22.49 PM.mp4
+output/YihuZ2wGiU/edit.mp4
